welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(); {
     setCouleurBrosse(Color.red);
     baisseBrosse(); 
	for(i<-0 to 2) { avance(); }
	gauche();
	for(i<-0 to 2) { avance(); }
	gauche();
	for(i<-0 to 2) { avance(); }
}
gauche();
avance();
avance();
avance(); 
leveBrosse();
avance();
dogHouse();
recule();
recule();
recule();
leveBrosse();
recule();
dogHouse();
droite();
avance();
avance();
avance();
leveBrosse();
avance();
dogHouse();



